objects/Grant_Project__c.object
<CustomObject>
    <description>Individual grant-funded projects submitted by grant recipients</description>
    <label>Grant Project</label>
    <nameField>
        <displayFormat>PROJ-{0000}</displayFormat>
        <label>Project ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Grant Projects</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
    
    <!-- Relationship to Grant Recipient (Master-Detail: C-4 fix) -->
    <fields>
        <fullName>Grant_Recipient__c</fullName>
        <label>Grant Recipient</label>
        <referenceTo>Grant_Recipient__c</referenceTo>
        <relationshipLabel>Grant Projects</relationshipLabel>
        <relationshipName>Grant_Projects</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <required>true</required>
        <type>MasterDetail</type>
        <writeRequiresMasterRead>true</writeRequiresMasterRead>
    </fields>
    
    <!-- Project Information -->
    <fields>
        <fullName>Project_Name__c</fullName>
        <label>Project Name</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Project_Description__c</fullName>
        <label>Project Description</label>
        <length>32768</length>
        <required>true</required>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Project_Category__c</fullName>
        <label>Project Category</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Education</fullName>
                </value>
                <value>
                    <fullName>Healthcare</fullName>
                </value>
                <value>
                    <fullName>Environment</fullName>
                </value>
                <value>
                    <fullName>Humanitarian Aid</fullName>
                </value>
                <value>
                    <fullName>Economic Development</fullName>
                </value>
                <value>
                    <fullName>Technology</fullName>
                </value>
                <value>
                    <fullName>Community Development</fullName>
                </value>
                <value>
                    <fullName>Arts and Culture</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Geographic_Focus__c</fullName>
        <label>Geographic Focus</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Target_Beneficiaries__c</fullName>
        <label>Target Beneficiaries</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Expected_Impact__c</fullName>
        <label>Expected Impact</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    
    <!-- Funding Request -->
    <fields>
        <fullName>Total_Funds_Requested__c</fullName>
        <label>Total Funds Requested (USD)</label>
        <precision>18</precision>
        <required>true</required>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Funds_Use_Plan__c</fullName>
        <label>Funds Use Plan</label>
        <length>32768</length>
        <required>true</required>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Funding_Needed_By__c</fullName>
        <label>Funding Needed By</label>
        <required>true</required>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Total_Funds_Approved__c</fullName>
        <label>Total Funds Approved (USD)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Total_Funds_Disbursed__c</fullName>
        <label>Total Funds Disbursed (USD)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Funds_Remaining__c</fullName>
        <formula>Total_Funds_Approved__c - Total_Funds_Disbursed__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Funds Remaining (USD)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    
    <!-- Timeline -->
    <fields>
        <fullName>Project_Start_Date__c</fullName>
        <label>Project Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Project_End_Date__c</fullName>
        <label>Project End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Project_Duration_Months__c</fullName>
        <label>Project Duration (Months)</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    
    <!-- Status -->
    <fields>
        <fullName>Project_Status__c</fullName>
        <label>Project Status</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Draft</fullName>
                    <default>true</default>
                    <label>Draft</label>
                </value>
                <value>
                    <fullName>Submitted</fullName>
                </value>
                <value>
                    <fullName>Under Review</fullName>
                </value>
                <value>
                    <fullName>Approved</fullName>
                </value>
                <value>
                    <fullName>Rejected</fullName>
                </value>
                <value>
                    <fullName>In Progress</fullName>
                </value>
                <value>
                    <fullName>On Hold</fullName>
                </value>
                <value>
                    <fullName>Completed</fullName>
                </value>
                <value>
                    <fullName>Cancelled</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Submission_Date__c</fullName>
        <label>Submission Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Approval_Date__c</fullName>
        <label>Approval Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Approved_By__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Approved By</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Approved_Projects</relationshipName>
        <type>Lookup</type>
    </fields>
    
    <!-- Prior Projects Reference -->
    <fields>
        <fullName>Prior_Projects_Summary__c</fullName>
        <label>Prior Projects Summary</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Prior_Projects_Evidence_Uploaded__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Prior Projects Evidence Uploaded</label>
        <type>Checkbox</type>
    </fields>
    
    <!-- Milestones Summary (Roll-up) -->
    <fields>
        <fullName>Total_Milestones__c</fullName>
        <label>Total Milestones</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Milestones_Completed__c</fullName>
        <label>Milestones Completed</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Milestone_Completion_Percentage__c</fullName>
        <formula>IF(Total_Milestones__c > 0, (Milestones_Completed__c / Total_Milestones__c) * 100, 0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Milestone Completion %</label>
        <precision>18</precision>
        <scale>1</scale>
        <type>Percent</type>
    </fields>
    
    <!-- Review Notes -->
    <fields>
        <fullName>Review_Notes__c</fullName>
        <label>Review Notes</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Rejection_Reason__c</fullName>
        <label>Rejection Reason</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>

    <!-- ============================================ -->
    <!-- VALIDATION RULES                             -->
    <!-- ============================================ -->

    <!-- H-3: Prevent edits to key fields after project approval -->
    <validationRules>
        <fullName>Prevent_Edit_After_Approval</fullName>
        <active>true</active>
        <description>Prevents changes to funding, use plan, and project name after project is approved, in progress, or completed. Admins with JIL_CRM_Admin permission set are exempt.</description>
        <errorConditionFormula>AND(
    OR(
        ISPICKVAL(PRIORVALUE(Project_Status__c), "Approved"),
        ISPICKVAL(PRIORVALUE(Project_Status__c), "In Progress"),
        ISPICKVAL(PRIORVALUE(Project_Status__c), "Completed")
    ),
    OR(
        ISCHANGED(Total_Funds_Requested__c),
        ISCHANGED(Funds_Use_Plan__c),
        ISCHANGED(Project_Name__c),
        ISCHANGED(Project_Description__c),
        ISCHANGED(Funding_Needed_By__c)
    ),
    NOT($Permission.JIL_CRM_Admin)
)</errorConditionFormula>
        <errorMessage>Cannot modify funding amount, use plan, or project details after approval. Please contact your grant administrator if changes are needed.</errorMessage>
    </validationRules>

</CustomObject>